# Test

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml
API/include/: Account.hpp  Api.hpp  Authorize.hpp  Exception.hpp  Operation_history.hpp  Process_payment.hpp  QuickPay.hpp  Request_payment.hpp
API/src/: Account.cpp  Authorize.cpp  Operation_history.cpp  Process_payment.cpp  QuickPay.cpp  Request_payment.cpp
